docs(name4): add CHEM-VALIDATION C15/C16 final DoD + EQ-DIST summary

--- a/docs/name4.tex
+++ b/docs/name4.tex
@@ -228,71 +228,99 @@ $H(\lambda)$. Эта величина монотонно растёт с $\lambd
         crossing-слоя сложности;
   \item уточнение и углубление ядерного модуля и спектрального
         моста между геометрической таблицей и $F_{\mathrm{nuc}}$.
-  \item равновесный химический контур для алканов (tree-only): fixed-$N$ MCMC, диагностика mixing и продуктовый пайплайн C15/C16.
+  \item равновесный химический контур для алканов (tree-only): fixed-$N$ MCMC, диагностика mixing, строгая coverage и продуктовый pipeline C15/C16.
 \end{itemize}
 
 \subsection{Пакет CHEM-VALIDATION: равновесные алканы (C4--C16)}
 
-В рамках химического контура QSG развивается отдельная линия валидации на
-классе \emph{tree-only} алканов (углеродные деревья, $m=N-1$, $\mathrm{deg}\le 4$).
-Цель --- получить воспроизводимое равновесное распределение по топологиям
-для фиксированного $N$ и использовать его как эталон для продуктового ранжирования
-по энергии сложности (Mode~A: FDM-only на деревьях).
+В рамках химического контура QSG реализован и закрыт (как продуктовый стенд) контур
+валидации на классе \emph{tree-only} алканов: связные деревья на $N$ вершинах (углероды),
+$c=N-1$ рёбер, цикломатическое число $0$, ограничение валентности $\max\deg\le 4$.
+Цель --- получать воспроизводимую равновесную меру по топологиям при фиксированном $N$
+и использовать её как эталон для ранжирования изомеров по ``энергии сложности''
+(Mode~A: FDM-only на деревьях).
+
+\paragraph{Топологии, пометки и дегенерация.}
+Рассматриваются \emph{помеченные} деревья (labeled, вершины $1..N$) и
+индуцированные ими \emph{непомеченные} топологии (unlabeled). При переходе к топологиям
+учитывается комбинаторная дегенерация
+\[
+  g(\tau)=\frac{N!}{|\mathrm{Aut}(\tau)|},
+\]
+где $\mathrm{Aut}(\tau)$ --- группа автоморфизмов топологии $\tau$.
+Это обязательный множитель при сопоставлении ``энергий топологии'' с частотами.
 
 \paragraph{Рост $\neq$ равновесие.}
-Ключевой вывод контура: частоты, наблюдаемые в grower-процессе, отражают
-в первую очередь \emph{proposal/kernel bias}. Равновесная мера для фиксированного $N$
-получается отдельным слоем: fixed-$N$ MCMC по пространству помеченных деревьев
-(leaf-rewire + поправка Гастингса). Для малых $N$ используется exact-база (Pr\"ufer).
+Частоты, наблюдаемые в grower-процессе, отражают прежде всего \emph{proposal/kernel bias}
+и не являются равновесием при фиксированном $N$.
+Равновесная мера $P_{\mathrm{eq}}$ строится отдельным слоем:
+fixed-$N$ MCMC по пространству помеченных деревьев
+(leaf-rewire + поправка Гастингса). Для малых $N$ используется exact-база (Pr\"ufer),
+что позволяет проверять корректность MCMC ``по истине''.
 
 \paragraph{Инвариантность энергии на деревьях.}
-Для корректного сопоставления с $P_{\mathrm{pred}}$ и exact-базой энергия на tree-only
-делается инвариантной к переименованию вершин через канонизацию (deterministic relabel).
-Это устраняет label-dependence и стабилизирует сравнения распределений.
+Критический инженерный инвариант: энергия (FDM) на tree-only должна быть
+\emph{перестановочно-инвариантной}. Для этого перед вычислением FDM выполняется
+канонизация дерева (детерминированное переименование вершин), после чего для одной
+и той же топологии дисперсия энергии по различным пометкам стремится к нулю.
+Этот шаг восстановил согласованность $P_{\mathrm{pred}}$ и exact-базы на малых $N$
+и устранил ложные расхождения, вызванные label-dependence.
 
-\paragraph{Диагностика смешивания и выбор бюджета.}
-Для больших $N$ (C15/C16) бюджет шагов калибруется не ``вслепую'', а по guardrail-метрикам:
-$KL_{\max}$ (межцепочечный), $KL_{\mathrm{split}}$ (первая/вторая половины),
-$\widehat{R}$ по энергии и $ESS$ по энергии. Для $N=16$ финальный DoD-прогон
-зафиксирован на $32\,000\,000$ шагов на цепь при $\mathrm{burnin\_frac}=0.30$ и $\mathrm{thin}=10$
-(2 старта $\times$ 5 цепей; total budget $320\,000\,000$).
+\paragraph{DoD-метрики mixing и coverage.}
+Для больших $N$ (C15/C16) вместо ``стрельбы вслепую'' бюджет шагов калибруется по
+guardrail-метрикам (несколько стартов, несколько цепей):
+\begin{itemize}
+  \item $KL_{\mathrm{max\_pairwise}}\le 0.01$ (макс. KL между цепями),
+  \item $KL_{\mathrm{split\_max}}\le 0.01$ (KL между первой/второй половинами),
+  \item $\widehat{R}_{\mathrm{energy}}\le 1.05$,
+  \item $ESS_{\mathrm{energy}}\ge 500$,
+  \item \textbf{строгая coverage}: $n_{\mathrm{unique}}$ совпадает с ожидаемым числом
+        непомеченных топологий (C15: 4347; C16: 10359).
+\end{itemize}
+В CHEM-VALIDATION-5 бюджет задаётся как \emph{total steps} по всем
+$\#\mathrm{starts}\times\#\mathrm{chains}$; число шагов на цепь:
+$\mathrm{steps\_per\_chain}=\mathrm{steps\_total}/(\#\mathrm{starts}\cdot\#\mathrm{chains})$.
+Для финальных прогонов фиксируются также \texttt{thin=10} и \texttt{burnin\_frac=0.30}.
+
+\paragraph{Distributed-контур (EQ-DIST-1).}
+Для устойчивости к тайм-лимитам и масштабирования на произвольное железо введены
+\emph{work units} (аналог GIMPS): генератор задач (make\_tasks), воркер (worker) и
+агрегатор (aggregate) с режимом \texttt{--status} (READY/MISSING) и опциональной
+двойной верификацией на выбранных шагах. Энергия переиспользуется через
+персистентный energy-cache, а агрегаты фиксируются commit+push.
+
+\paragraph{Финальный результат C15/C16 (Mode A, fixed budget).}
+Контур CHEM-VALIDATION-5 закрыт на строгих DoD-порогах и 100\% coverage:
 
 \begin{center}
-\begin{tabular}{l r}
+\begin{tabular}{l r r}
 \hline
-Метрика (C16, финал) & Значение \\
+Метрика & C15 (финал) & C16 (финал) \\
 \hline
-$KL_{\mathrm{max\_pairwise}}$ & $0.004858$ \\
-$KL_{\mathrm{split\_max}}$ & $0.009774$ \\
-$\widehat{R}_{\mathrm{energy}}$ (max) & $1.000001$ \\
-$ESS_{\mathrm{energy}}$ (min) & $6.7\times 10^{5}$ \\
-Coverage ($n_{\mathrm{unique}}$) & $10359/10359$ \\
+$\mathrm{steps\_total}$ & $1.60\times 10^{8}$ & $3.20\times 10^{8}$ \\
+$\mathrm{steps\_per\_chain}$ & $1.6\times 10^{7}$ & $3.2\times 10^{7}$ \\
+$KL_{\mathrm{max\_pairwise}}$ & $0.004114$ & $0.004858$ \\
+$KL_{\mathrm{split\_max}}$ & $0.008336$ & $0.009774$ \\
+$\widehat{R}_{\mathrm{energy}}$ (max) & $1.000000$ & $1.000001$ \\
+$ESS_{\mathrm{energy}}$ (min) & $3.79\times 10^{5}$ & $6.73\times 10^{5}$ \\
+Coverage ($n_{\mathrm{unique}}$) & $4347/4347$ & $10359/10359$ \\
 \hline
 \end{tabular}
 \end{center}
 
-Для $N=15$ финальный DoD-прогон также закрыт в fixed-budget режиме:
-строгая coverage $4347/4347$, $KL_{\mathrm{max\_pairwise}}=0.004114$,
-$KL_{\mathrm{split\_max}}=0.008336$, $\widehat{R}_{\mathrm{energy}}=1.000000$,
-$ESS_{\mathrm{energy}}\approx 3.8\times 10^{5}$.
+\paragraph{Комментарий о ``статистическом полу'' $KL_{\mathrm{split}}$.}
+На больших пространствах (C16: $K\approx 10^{4}$ топологий) $KL_{\mathrm{split}}$
+приближается к нижнему уровню, обусловленному конечной длиной цепей и дискретностью
+эмпирических частот. Практически это означает: дальнейшее увеличение бюджета даёт
+уменьшение $KL_{\mathrm{max\_pairwise}}$ быстрее, чем $KL_{\mathrm{split}}$.
+Инженерный порог $0.01$ остаётся разумным gate, но требует интерпретации вместе с
+coverage и $\widehat{R}/ESS$.
 
-\paragraph{``Статистический пол'' для $KL_{\mathrm{split}}$.}
-На больших пространствах топологий (C16: $K\approx 10^4$) $KL_{\mathrm{split}}$
-имеет ненулевой нижний уровень из-за конечной выборки половин; поэтому burn-in
-и размер retained-window должны подбираться так, чтобы теоретический пол был ниже
-инженерного порога (0.01).
-
-\paragraph{Distributed-контур (EQ-DIST-1).}
-Чтобы сделать скан бюджетов и DoD-прогоны устойчивыми к тайм-лимитам и масштабируемыми
-на произвольное железо, введены \emph{work units} (как в GIMPS):
-генератор задач (make\_tasks), воркер (worker) и агрегатор (aggregate) с режимом
-status (READY/MISSING) и опциональной двойной верификацией на выбранных шагах.
-В прод-режиме результаты и агрегаты автоматически фиксируются commit+push.
-
-\paragraph{Следующий шаг.}
-После закрытия C16 необходимо закрыть C15 тем же стандартом (fixed-budget, burn-in=0.30,
-строгая coverage), а затем упаковать контур в продуктовый pipeline: стабильные CLI,
-детерминированные seeds, единый формат отчётов и регрессионные тесты на малых $N$.
+\paragraph{Следующий инженерный шаг.}
+Далее контур упаковывается в стабильный продуктовый pipeline:
+единые CLI/конфиги, детерминированные seeds, единый формат отчётов, регрессионные тесты
+на малых $N$ (exact vs MCMC) и расширение за пределы tree-only (циклы/конформации)
+с сохранением раздельной трактовки proposal bias и равновесия.
 
 
 \subsection{Geom–nuclear–FDM: первый связанный стенд}
