docs(vol2): rebuild pdf (derived)

--- a/docs/name4.tex
+++ b/docs/name4.tex
@@ -3,9 +3,12 @@
 \usepackage{polyglossia}
 \setmainlanguage{russian}
 \setotherlanguage{english}
-\setmainfont{Times New Roman}
-\setsansfont{Arial}
+\setmainfont{Microsoft YaHei}[ItalicFont=Segoe UI Italic]
+\setsansfont{Microsoft YaHei}[ItalicFont=Segoe UI Italic]
+\newfontfamily\cyrillicfont{Microsoft YaHei}[ItalicFont=Segoe UI Italic]
+\newfontfamily\cyrillicfontsf{Microsoft YaHei}[ItalicFont=Segoe UI Italic]
 \setmonofont{Consolas}
+\usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{geometry}
 \geometry{margin=2.5cm}
